# dynamic-api

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/swagger-ui/: swagger-initializer.js
static/swagger-ui-dist/: swagger-initializer.js  swagger-ui.css
