[package]
name = "dynamic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
actix-cors = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
utoipa = { version = "5.4.0" }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
schemars = "1.0.4"
jsonschema = "0.17.1"
lazy_static = "1.5.0"
uuid = { version = "1.18.0", features = ["v4"] }
